--- a/markflask/templates/Gallery.html
+++ b/markflask/templates/Gallery.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-  
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>Gallery</title>
 
   
-</head><body>
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Gallery</title></head><body><span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
 
-<br>
-<img src="{{ url_for('static', filename = 'profile.jpg') }}" alt="">
+Name: </span><span style="font-family: Helvetica,Arial,sans-serif;">{{ name }}
+</span><br style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
+<span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">Age: </span><span style="font-family: Helvetica,Arial,sans-serif;">{{ age }}
+</span><br style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
+<span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">Location: </span><span style="font-family: Helvetica,Arial,sans-serif;">{{ location }}</span><span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
+</span><br>
+<img src="%7B%7B%20url_for%28%27static%27,%20filename%20=%20%27profile.jpg%27%29%20%7D%7D" alt="">
 
 <br>
 
