working on understanding

--- a/markflask/templates/main.html
+++ b/markflask/templates/main.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gallery</title>
+    <title>Galleries</title>
 </head>
 <body>
 <h1>Gallery</h1>
     
     {% for i in userlist %}
+    <a style="font-weight: bold;"
     <a href="http://127.0.0.1:5000/{{i}}/gallery/">{{i}}</a><br>
+    <img style="width: 375px" alt="Profile"
+    src="{{url_for('static', filename='/users/' + i + '/profile.jpg')}}" align="middle" /><br>
+
     {% endfor %}
     
 
