--- a/markflask/templates/userpage.html
+++ b/markflask/templates/userpage.html
@@ -2,7 +2,9 @@
 <html><head>
 
   
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>{{ name }}</title></head><body><span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>{{ name }}</title></head>
+
+  <body><span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
 
 Name: </span><span style="font-family: Helvetica,Arial,sans-serif;">{{ name }}
 </span><br style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
