--- a/markflask/templates/main.html
+++ b/markflask/templates/main.html
@@ -5,7 +5,7 @@
     <title>Galleries</title>
 </head>
 <body>
-<h1>Gallery</h1>
+<h1>USERS</h1>
     
     {% for i in userlist %}
     <a style="font-weight: bold;"
