--- a/markflask/templates/userpage.html
+++ b/markflask/templates/userpage.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
+<html>
 
+<head>
   
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>{{ name }}</title></head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>{{ name }}</title>
 
-  <body>
+</head>
 
-    <span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
+<body>
 
+<span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
 Name: </span><span style="font-family: Helvetica,Arial,sans-serif;">{{ name }}
+
 </span><br style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
 <span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
-
 Age: </span><span style="font-family: Helvetica,Arial,sans-serif;">{{ age }}
+
 </span><br style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
 <span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
-
 Location: </span><span style="font-family: Helvetica,Arial,sans-serif;">{{ location }}</span><span style="font-family: Helvetica,Arial,sans-serif; font-weight: bold;">
+
 </span><br>
 
 <a href="{{'http://127.0.0.1:5000/' + name + '/gallery/'}}">Gallery</a> <br>
